style.css
:root {
  --light-color: white;

  --dark-color: #222222;
  --dark-color-alt: #2A2A2A;

  --github-icon-dark: url(resources/img/GitHub_Dark.png);
  --github-icon-light: url(resources/img/GitHub_Light.png);

  /* Set the following to change the color scheme. */

  /* Light mode */

  --font-color: black;
  --background-color: var(--light-color);
  --github-icon: var(--github-icon-dark)

  /* Dark mode

  --font-color: white;
  --background-color: var(--dark-color-alt);
  --github-icon: var(--github-icon-light);

  */
}

@font-face {
  font-family: Blanka;
  src: url(resources/font/Blanka-Regular.otf);
}

body {
  margin: 0;
  background-color: var(--background-color);
  font-family: Segoe UI, SegoeUI, "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: var(--font-color);
}

/* Navbar */

.top-navbar {
  width: 100%;
  height: auto;

  background-color: var(--dark-color);
  display: grid;

  grid-template-columns: auto 0 0 5rem;
}

.top-navbar-container {
  display: flex;
  flex-direction: column;

  align-items: center;

  position: fixed;
  right: 0;

  width: 45vw;

  background-color: var(--dark-color);

  visibility: hidden;
}

.top-navbar-logo-container {
  width: 100%;

  display: flex;
  flex-direction: row;

  align-items: center;
}

.top-navbar-logo-container p {
  font-weight: normal;
  font-family: Blanka;
  font-size: 2rem;
  color: white;

  margin: 0 1rem 0.8rem 0;
}

.top-navbar-logo-container img {
  width: 3rem;
  height: 3rem;
  margin: 0.5rem;
}

.hamburger-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  width: 4rem;
  height: 4rem;

  margin-right: 1rem;

  background-color: transparent;
  border: none;
  cursor: pointer;
}

.bar {
  width: 100%;
  height: 0.4rem;
  background-color: white;
  margin-bottom: 0.3rem;
  border-radius: 1rem;
}

@media screen and (min-width: 950px) {
  .active {
    font-weight: bold;
    font-size: 1.2em;
  }

  .top-navbar {
    align-items: center;
    grid-template-columns: 17rem 0.35rem auto 0;
  }

  .top-navbar-logo-container p {
    font-size: 3rem;
    margin: 0 1rem 1.2rem 0;
  }

  .top-navbar-container {
    flex-direction: row;

    position: relative;

    width: 100%;
    height: 100%;

    visibility: visible;
  }

  .top-navbar-container a {
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 1.2rem;
    color: white;
    text-decoration: none;
  }

  .top-navbar-container a:hover {
    background-color: var(--dark-color-alt);
  }

  .top-navbar-divider {
    width: 100%;
    height: 60%;
    background-color: white;
    border-radius: 1rem;

    justify-self: flex-start;
  }

  .hamburger-button {
    display: none;
  }
}

/* Footer */

footer {
  background-color: var(--dark-color);

  display: grid;
  grid-template-rows: auto auto auto;
  justify-content: center;

  padding: 1rem 0 4rem 0;
  margin-top: 1rem;
}

footer h1 {
  text-align: center;
  color: white;

  font-family: Blanka;
  font-weight: normal;
  font-size: 4em;

  margin: 0;
}

footer p {
  text-align: center;
  color: white;
  opacity: 0.5;
  font-size: 0.9em;
}

.legal-link-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.legal-link-container a {
  color: white;
  text-decoration: none;
  margin: 0 1rem;
}

.legal-link-container a:hover {
  text-decoration: underline;
}

/* index.html */

/* Front Page Header */

#front-page-header {
  background-image: url("resources/img/Standard.jpg");
  background-position: center 20%;
  background-size: fill;
  background-repeat: no-repeat;
  background-color: black;

  width: 100%;
  height: auto; 
}

#front-page-header img {
  display: block;
  height: 30%;
  margin: 0 auto;
  padding-top: 6%;
}

#front-page-header h1 {
  text-align: center;

  color: white;

  font-family: Blanka;
  font-weight: normal;
  font-size: 5em;

  margin-block: 0;

  padding-bottom: 5%;
}

/* QNA */

.question {
  width: 90vw;
  margin: auto;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.question img {
  width: 100%;
  margin: 2rem;
}

@media screen and (min-width: 1500px) {
  .question {
    width: 80rem;

    display: grid;

    grid-template-columns: 1fr 1fr;
    grid-auto-flow: column;

    justify-content: center;
  }
}

/* Contributors */

.contributor-section {
  display: grid;
  grid-template-rows: auto auto;
}

.contributor-section h2 {
  font-size: 2.5em;
  justify-self: center;
}

.contributor-container {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

.contributor {
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: rgba(0, 0, 0, 0.2);
  width: 12rem;
  height: 24rem;
  margin: 1rem;
  padding: 2rem;

  transition: 0.1s;
}

.contributor:hover {
  transform: translateY(-0.5rem);
}

.contributor img {
  width: 100%;
  height: 100%;
}

.name {
  font-size: 1.2em;
  margin-bottom: 0;
}

.role {
  opacity: 0.8;
  font-style: italic;
}

.socials {
  margin-top: auto;
  margin-right: auto;
}

.socials a {
  font-size: 0.9em;
  background-size: 1em;
  background-repeat: no-repeat;
  background-position: left;

  padding-left: 1.3em;

  text-decoration: none;
  color: var(--font-color);
}

.github {
  background-image: var(--github-icon);
}

.github:hover {
  text-decoration: underline;
}

